data/derived/sp14/progs/unify/prog1369.ml.out
Characters 63-64:
  | h::t -> h::(append x t);;
                         ^
Error: This expression has type 'a list
       but an expression was expected of type 'a list list
       The type variable 'a occurs inside 'a list
